src/components/common/header/Header.module.css
.header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 500;

  width: 100%;
  height: 72px;
  border-bottom: 1px solid var(--color-gray-300);
  background-color: var(--color-white);
}

.inner {
  margin: 0 auto;
  max-width: 1320px;
  height: 72px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav {
  flex: 1 1 auto;
  padding-left: 60px;
}
.nav ul {
  display: flex;
}
.nav ul li {
  margin-right: 34px;
  font-size: 16px;
}

.nav ul li a {
  text-decoration: none;
  font-size: inherit;
}

.nav ul li a:hover {
  color: var(--color-primary-500);
  font-weight: 600;
}

.buttonArea {
  margin-top: -2px;
  width: 162px;
  margin-left: auto;
  display: flex;
  align-items: center;
  gap: 16px;
}

.chat {
  position: relative;
  width: 48px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.buttonArea svg {
  font-size: 28px;
  color: var(--color-gray-500);
}

.btn {
  position: relative;
  margin-right: -12px;
  border: none;
  width: 48px;
  height: 48px;
  background-color: transparent;
  cursor: pointer;
}

.btn > div {
  width: 48px;
  height: 48px;
}

.badge {
  top: 2px;
  right: 2px;
  position: absolute;
  padding: 3px 7px;
  border-radius: 50%;
  background-color: var(--color-primary-500);
  font-size: 14px;
  font-weight: 500;
  color: var(--color-white);
}

.btn > .badge {
  padding: 1.5px 7px;
  font-family: 'Pretendard Variable', sans-serif;
}

.btnContainer {
  position: relative;
}

.menuContainer {
  margin-top: 8px;
  position: absolute;
  right: -8px;
  padding: 8px 0;
  background-color: var(--color-white);
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
}

.menu {
  display: block;
  border: none;
  background-color: transparent;
  width: 124px;
  padding: 12px 16px;
  text-align: left;
  font-size: 14px;
  color: var(--color-gray-800);
  cursor: pointer;
}

.menu:hover {
  font-weight: 500;
  color: var(--color-primary-500);
}

